crates/bitnet-kernels/tests/snapshots/snapshot_wave25__w25_cpu_fused_op_all_display.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave25.rs
expression: displays
---
[
    "RmsNormLinear",
    "GeluLinear",
    "SoftmaxMask",
    "AddNormalize",
    "ScaleAndAdd",
]
