crates/bitnet-kernels/tests/snapshots/snapshot_wave25__w25_cpu_fusion_config_default.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave25.rs
expression: cfg
---
FusionConfig {
    enable_rmsnorm_linear: true,
    enable_gelu_linear: true,
    enable_softmax_mask: true,
    min_fusion_size: 32,
}
