crates/bitnet-kernels/tests/snapshots/snapshot_wave25__w25_cpu_fusion_error_dimension_mismatch.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave25.rs
expression: err.to_string()
---
dimension mismatch: expected 1024, got 768
