crates/bitnet-kernels/tests/snapshots/snapshot_wave25__w25_cuda_pool_type_all_variants.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave25.rs
expression: types
---
[
    Max,
    Average,
]
