crates/bitnet-kernels/tests/snapshots/snapshot_wave25__w25_fused_elementwise_launch_large.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave25.rs
expression: cfg
---
FusedElementwiseLaunchConfig {
    n: 1048576,
    threads_per_block: 256,
}
