crates/bitnet-kernels/tests/snapshots/snapshot_wave25__w25_fused_matmul_launch_large.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave25.rs
expression: "format!(\"n={} out_dim={} tpb={} grid={:?} block={:?} shmem={}\", cfg.n,\ncfg.out_dim, cfg.threads_per_block, cfg.grid_dim(), cfg.block_dim(),\ncfg.shared_mem_bytes())"
---
n=4096 out_dim=2048 tpb=256 grid=(2048, 1, 1) block=(256, 1, 1) shmem=1024
