crates/bitnet-kernels/tests/snapshots/snapshot_wave25__w25_fused_op_all_kernel_names.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave25.rs
expression: names
---
[
    "fused_rmsnorm_linear_f32",
    "fused_gelu_linear_f32",
    "fused_softmax_mask_f32",
    "fused_add_rmsnorm_f32",
    "fused_scale_add_f32",
]
