crates/bitnet-kernels/tests/snapshots/snapshot_wave25__w25_fusion_config_disabled_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave25.rs
expression: cfg
---
FusionConfig {
    enable_rmsnorm_linear: false,
    enable_gelu_linear: false,
    enable_softmax_mask: false,
    min_fusion_size: 18446744073709551615,
}
